fixed spacing in timers

--- a/capstone/src/App.css
+++ b/capstone/src/App.css
@@ -19,7 +19,10 @@ h4, .timerFace {
 }
 .headerIcon {
   font-size: 1rem;
-  text-align: right;
+  text-align: justify;
+}
+.headerText {
+  align-content: left ;
 }
 .timer {
   box-sizing: content-box;
